--- a/assignments/05_Joukowski_Trans.ipynb
+++ b/assignments/05_Joukowski_Trans.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2e52df1fcf38309d756de0e12fb46fc4e8baac98161cdc334ce1149bd74d56c8"
+  "signature": "sha256:6b73f78fda7c61d35498c109605dcf9885f15917e2ac8d295bbbcc5486c6ea8a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -427,7 +427,7 @@
      "level": 6,
      "metadata": {},
      "source": [
-      "Library"
+      "Libraries"
      ]
     },
     {
