added my panel method exercise

--- a/assignments/08_SourceSheet.ipynb
+++ b/assignments/08_SourceSheet.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -19,6 +19,17 @@
     "from potential_utils import *\n",
     "from matplotlib import pyplot\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "?Source"
    ]
   },
   {
