--- a/assignments/09_FlowOverCylinder.ipynb
+++ b/assignments/09_FlowOverCylinder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -456,21 +456,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(100, 100)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print numpy.shape(X)"
+    "?integrate"
    ]
   },
   {
@@ -500,6 +492,37 @@
     "        x,y = X[i,j], Y[i,j]\n",
     "        u,v = sum_integral_vel(panels, x, y)\n",
     "        U[i,j], V[i,j] = u,v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def distance(a,b):\n",
+    "    \"\"\"Return the distance bwt two points.\n",
+    "    \n",
+    "    Arguments:\n",
+    "        a, b: sdf\n",
+    "    \n",
+    "    Return:\n",
+    "        distance\n",
+    "    \"\"\"\n",
+    "    return numpy.sqrt(a**2-b**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "?distance"
    ]
   },
   {
